--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,7 +5,7 @@ import type { CollectionEntry } from 'astro:content'
 // Plugin styles
 import 'katex/dist/katex.min.css'
 
-import { Comment, MediumZoom } from 'astro-pure/advanced'
+import { MediumZoom } from 'astro-pure/advanced'
 import { ArticleBottom, BackToTop, Copyright, Hero, TOC } from 'astro-pure/components/pages'
 import { Button } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
@@ -79,8 +79,6 @@ const primaryColor = data.heroImage?.color ?? 'hsl(var(--primary) / var(--tw-tex
       <Copyright {data} />
       {/* Article recommend */}
       <ArticleBottom collections={posts} {id} class='mt-3 sm:mt-6' />
-      {/* Comment */}
-      {!isDraft && enableComment && <Comment class='mt-3 sm:mt-6' />}
     </div>
     <div class='min-w-48 basis-60'>
       <slot name='bottom' />
