--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,10 @@ import SkillLayout from '@/components/home/SkillLayout.astro'
 import avatar from '@/assets/avatar.png'
 import config from '@/site-config'
 
-const languages = ['Html', 'JavaScript', 'CSS', 'Shell']
-const frontend = ['TypeScript', 'Vite', 'Webpack', 'Astro']
-const backend = ['Vercel', 'Waline']
+const languages = ['HTML', 'JavaScript', 'CSS', 'Shell', 'Go', 'Python']
+const frontend = ['TypeScript', 'React', 'Astro', 'jQuery']
+const backend = ['NodeJs', 'Go']
+const tools = ['neovim', 'Docker', 'Git', 'GnuPG', 'Linux', 'Nginx', 'Sqlite3', 'tmux']
 
 const MAX_POSTS = 10
 const allPosts = await getBlogCollection()
@@ -33,43 +34,27 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       <div class='flex flex-col items-center gap-y-4'>
         <h1 class='text-3xl font-bold'>{config.author}</h1>
         <div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-          <Label title='China'>
+          <Label title='Taiwan'>
             <Icon name='location' class='size-5' slot='icon' />
           </Label>
-          <Label
-            title='Source code'
-            as='a'
-            href='https://github.com/cworld1/astro-theme-pure'
-            target='_blank'
-          >
-            <Icon name='github' class='size-5' slot='icon' />
-          </Label>
+          <!-- <Label -->
+          <!--   title='' -->
+          <!--   as='a' -->
+          <!--   href='https://github.com/cworld1/astro-theme-pure' -->
+          <!--   target='_blank' -->
+          <!-- > -->
+          <!--   <Icon name='github' class='size-5' slot='icon' /> -->
+          <!-- </Label> -->
         </div>
       </div>
-
-      {/* Get template */}
-      <a
-        href='https://github.com/cworld1/astro-theme-pure'
-        target='_blank'
-        class='flex flex-row items-center gap-x-3 rounded-full border border-border bg-background px-4 py-2 text-sm shadow-sm transition-shadow hover:shadow-md'
-      >
-        <span class='relative flex items-center justify-center'>
-          <span
-            class='absolute size-2 animate-ping rounded-full border border-green-400 bg-green-400 opacity-75'
-          ></span>
-          <span class='size-2 rounded-full bg-green-400'></span>
-        </span>
-        <p class='font-medium text-muted-foreground'>Get Template</p>
-      </a>
     </section>
 
     <div id='content' class='animate flex flex-col gap-y-10 md:w-4/5 lg:w-5/6'>
       <Section title='About'>
-        <p class='text-muted-foreground'>Developer / Designer</p>
+        <p class='text-muted-foreground'>學生 / 開發者</p>
+        <!-- TODO: about summary -->
         <p class='text-muted-foreground'>
-          Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione
-          indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel,
-          at eum oratio possit voluptatum.
+          我是來自臺灣的長條貓，目前就讀成大物理系大四，即將進入交大網工所。喜歡自己煮飯，養了一隻橘白貓叫做花生。
         </p>
         <Button title='More about me' class='w-fit self-end' href='/about' style='ahead' />
       </Section>
@@ -119,10 +104,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
       }
       <Section title='Education'>
         <Card
-          as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei.'
-          date='August 2021 - July 2025'
+          heading='成大物理系學士'
+          subheading='國立成功大學物理學系 學士學位'
+          date='September 2021 - June 2025'
           href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
         >
           {
@@ -137,49 +121,50 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
         </Card>
       </Section>
 
-      <Section title='Website List'>
+      <Section title='Projects'>
         <div class='grid grid-cols-1 gap-3 sm:grid-cols-2'>
           <ProjectCard
-            href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
-            heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
+            href='https://github.com/simbafs/sitcon-broadcast'
+            heading='SITCON 直播字卡'
+            subheading='程式化產生直播字訊字卡'
             imagePath='/src/assets/projects/alex-tyson-2BAXJ7ha74s-unsplash.jpg'
           />
-          <ProjectCard
-            href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
-            heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
-            imagePath='/src/assets/projects/angelica-teran-Bk9hpaXHK4o-unsplash.jpg'
-          />
-          <ProjectCard
-            href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
-            heading='Lorem ipsum'
-            subheading='dolor sit amet, oratio ornatus explicari pro ex'
-            imagePath='/src/assets/projects/kseniia-zapiatkina-yATU3rg8tNI-unsplash.jpg'
-          />
-          <ProjectCard
-            href='/projects'
-            heading='More projects'
-            subheading='Check out more projects'
-            imagePath='/src/assets/projects/wen-qiao-g_w8I64FiO0-unsplash.jpg'
-          />
+          <!-- <ProjectCard -->
+          <!--   href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' -->
+          <!--   heading='Lorem ipsum' -->
+          <!--   subheading='dolor sit amet, oratio ornatus explicari pro ex' -->
+          <!--   imagePath='/src/assets/projects/angelica-teran-Bk9hpaXHK4o-unsplash.jpg' -->
+          <!-- /> -->
+          <!-- <ProjectCard -->
+          <!--   href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' -->
+          <!--   heading='Lorem ipsum' -->
+          <!--   subheading='dolor sit amet, oratio ornatus explicari pro ex' -->
+          <!--   imagePath='/src/assets/projects/kseniia-zapiatkina-yATU3rg8tNI-unsplash.jpg' -->
+          <!-- /> -->
+          <!-- <ProjectCard -->
+          <!--   href='/projects' -->
+          <!--   heading='More projects' -->
+          <!--   subheading='Check out more projects' -->
+          <!--   imagePath='/src/assets/projects/wen-qiao-g_w8I64FiO0-unsplash.jpg' -->
+          <!-- /> -->
         </div>
       </Section>
 
-      <Section title='Certifications'>
-        <Card
-          as='a'
-          heading='Lorem ipsum'
-          subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio possit voluptatum. Dicat ceteros cu vim. Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.'
-          date='July 2024'
-          href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'
-        />
-      </Section>
+      <!-- <Section title='Certifications'> -->
+      <!--   <Card -->
+      <!--     as='a' -->
+      <!--     heading='Lorem ipsum' -->
+      <!--     subheading='Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio possit voluptatum. Dicat ceteros cu vim. Impetus fuisset ullamcorper pri cu, his posse iisque ad, aliquam honestatis usu id.' -->
+      <!--     date='July 2024' -->
+      <!--     href='https://www.youtube.com/watch?v=dQw4w9WgXcQ' -->
+      <!--   /> -->
+      <!-- </Section> -->
 
       <Section title='Skills'>
         <SkillLayout title='Languages' skills={languages} />
         <SkillLayout title='Frontend' skills={frontend} />
         <SkillLayout title='Backend' skills={backend} />
+        <SkillLayout title='Tools' skills={tools} />
       </Section>
     </div>
   </main>
