--- a/src/layouts/CommonPage.astro
+++ b/src/layouts/CommonPage.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownHeading } from 'astro'
 
-import { BackToTop, PageInfo, TOC } from 'astro-pure/components/pages'
+import { BackToTop, TOC } from 'astro-pure/components/pages'
 import { Button } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
 import PageLayout from '@/layouts/BaseLayout.astro'
@@ -38,15 +38,15 @@ const { title, headings, info, ...props } = Astro.props
         <h1 class='text-2xl font-medium sm:mb-2 sm:text-3xl'>
           {title}
         </h1>
-        {
-          info && (
-            <PageInfo
-              path={typeof info === 'string' ? info : info.slug}
-              hideComment={typeof info === 'object' && info.hideComment ? info.hideComment : false}
-              class='italic'
-            />
-          )
-        }
+        <!-- { -->
+        <!--   info && ( -->
+        <!--     <PageInfo -->
+        <!--       path={typeof info === 'string' ? info : info.slug} -->
+        <!--       hideComment={typeof info === 'object' && info.hideComment ? info.hideComment : false} -->
+        <!--       class='italic' -->
+        <!--     /> -->
+        <!--   ) -->
+        <!-- } -->
       </div>
       <div
         id='content'
