--- a/src/components/about/Substats.astro
+++ b/src/components/about/Substats.astro
@@ -21,6 +21,7 @@ const { stats } = Astro.props as Props
 async function fetchCount(item: SubstatsItem) {
   if (!item.api) return
   try {
+    // TODO: make my own api
     const response = await fetch(`https://api.swo.moe/stats/${item.api}`)
     const data = await response.json()
     if (data.failed) {
@@ -56,7 +57,7 @@ await Promise.all(stats.map(fetchCount))
               <span class='text-sm font-normal'>{text}</span>
             </div>
           ) : (
-            'null'
+            ''
           )}
         </div>
       </a>
