--- a/src/pages/links/index.astro
+++ b/src/pages/links/index.astro
@@ -1,53 +1,34 @@
 ---
-import links from 'public/links.json'
-import config from 'virtual:config'
+// import links from 'public/links.json'
+// import config from 'virtual:config'
 
-import { Collapse, Timeline } from 'astro-pure/user'
+// import { Collapse, Timeline } from 'astro-pure/user'
 import PageLayout from '@/layouts/CommonPage.astro'
-import FriendList from '@/components/links/FriendList.astro'
+// import FriendList from '@/components/links/FriendList.astro'
 
 const headings = [
-  { depth: 2, slug: 'common-links', text: 'Common Links' },
-  { depth: 2, slug: 'special-links', text: 'Special Links' },
-  { depth: 2, slug: 'apply-links', text: 'Apply Links' }
+  // { depth: 2, slug: 'common-links', text: 'Common Links' },
+  // { depth: 2, slug: 'special-links', text: 'Special Links' },
+  // { depth: 2, slug: 'apply-links', text: 'Apply Links' }
 ]
 
-const { friends } = links
-const linksConfig = config.integ.links
+// const { friends } = links
+// const linksConfig = config.integ.links
 ---
 
 <PageLayout title='Links' {headings} info='/links'>
-  <p>怎么可能有顺序呢，当然是随机的~</p>
-  <h2 id='common-links'>Common Links</h2>
-  <FriendList list={friends[0]} />
-  <Collapse title='Links with Bad Status'>
-    <FriendList list={friends[1]} />
-  </Collapse>
-  <Collapse title='Link History Book'>
-    <Timeline events={linksConfig.logbook} />
-  </Collapse>
-  <h2 id='special-links'>Special Links</h2>
-  <FriendList list={friends[2]} />
+  <p>這裡可能會放一些朋友的部落格，但我還懶得整理</p>
+  <!-- <p>怎么可能有顺序呢，当然是随机的~</p> -->
+  <!-- <h2 id='common-links'>Common Links</h2> -->
+  <!-- <FriendList list={friends[0]} /> -->
+  <!-- <Collapse title='Links with Bad Status'> -->
+  <!--   <FriendList list={friends[1]} /> -->
+  <!-- </Collapse> -->
+  <!-- <Collapse title='Link History Book'> -->
+  <!--   <Timeline events={linksConfig.logbook} /> -->
+  <!-- </Collapse> -->
+  <!-- <h2 id='special-links'>Special Links</h2> -->
+  <!-- <FriendList list={friends[2]} /> -->
 
   <!-- apply-links -->
-  <h2 id='apply-links'>Apply Links</h2>
-  <p>本站信息如下：</p>
-  <blockquote class='not-prose break-words border-s-4 ps-4'>
-    <p>名称：<code>{linksConfig.applyTip.name}</code></p>
-    <p>简介：<code>{linksConfig.applyTip.desc}</code></p>
-    <p>链接：<code>{linksConfig.applyTip.url}</code></p>
-    <p>图标：<code>{linksConfig.applyTip.avatar}</code></p>
-  </blockquote>
-
-  <p>
-    申请时还请按照这个模板留言（<a
-      href='https://github.com/cworld1/astro-theme-pure/blob/main/public/links.json'
-      target='_blank'>提交 PR</a
-    > 或许也是个更快的办法）。此外有关申请说明：
-  </p>
-  <ul>
-    <li>在你的友链上添加了本站；</li>
-    <li>请确保你的站点活着；</li>
-    <li>博客内容不违反国家法律。</li>
-  </ul>
 </PageLayout>
