--- a/src/components/projects/ProjectSection.astro
+++ b/src/components/projects/ProjectSection.astro
@@ -6,7 +6,7 @@ import type { iconsType } from 'astro-pure/types'
 import { Icon } from 'astro-pure/user'
 import { cn } from 'astro-pure/utils'
 
-interface Props {
+export interface Props {
   class?: string
   project: {
     image?: string
