add legacy on old posts

--- a/packages/pure/components/pages/PostPreview.astro
+++ b/packages/pure/components/pages/PostPreview.astro
@@ -58,6 +58,7 @@ const postDate = data.updatedDate ?? data.publishDate
       <div class='flex justify-between'>
         <div class={detailed && 'font-medium'}>
           {data.draft && <span class='text-red-500'>(Draft) </span>}
+          {data.legacy && <span class='text-red-500'>(Legacy) </span>}
           {data.title}
         </div>
         <svg
