--- a/packages/pure/components/pages/Hero.astro
+++ b/packages/pure/components/pages/Hero.astro
@@ -10,16 +10,7 @@ interface Props {
 }
 
 const {
-  data: {
-    title,
-    description,
-    draft,
-    heroImage,
-    publishDate,
-    updatedDate,
-    tags,
-    language
-  },
+  data: { title, description, heroImage, publishDate, updatedDate, tags, language, draft, legacy },
   remarkPluginFrontmatter
 } = Astro.props
 
@@ -50,6 +41,7 @@ const dateTimeOptions: Intl.DateTimeFormatOptions = {
   )
 }
 
+{legacy ? <span class='text-red-500'>(Legacy)</span> : null}
 {draft ? <span class='text-red-500'>(Draft)</span> : null}
 
 <div class='article-info max-lg:mx-auto'>
