fix almost all error

--- a/src/pages/legacy/[...id].astro
+++ b/src/pages/legacy/[...id].astro
@@ -2,7 +2,7 @@
 import { render, type CollectionEntry } from 'astro:content'
 
 import { getBlogCollection, sortMDByDate } from 'astro-pure/server'
-import PostLayout from '@/layouts/BlogPost.astro'
+import PostLayout from '@/layouts/LegacyPost.astro'
 
 export const prerender = true
 
