--- a/src/pages/legacy/[...page].astro
+++ b/src/pages/legacy/[...page].astro
@@ -21,7 +21,7 @@ export const getStaticPaths = (async ({ paginate }) => {
 }) satisfies GetStaticPaths
 
 interface Props {
-  page: Page<CollectionEntry<'blog'>>
+  page: Page<CollectionEntry<'legacy'>>
   uniqueTags: string[]
   collectionsCount: number
 }
